--- a/KiaMaps.xcodeproj/xcshareddata/xcschemes/KiaExtensionUI.xcscheme
+++ b/KiaMaps.xcodeproj/xcshareddata/xcschemes/KiaExtensionUI.xcscheme
@@ -51,6 +51,17 @@
          </BuildableReference>
       </MacroExpansion>
       <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "803D467C2E2E7413003EFC10"
+               BuildableName = "KiaTests.xctest"
+               BlueprintName = "KiaTests"
+               ReferencedContainer = "container:KiaMaps.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
